--- a/web/src/engine/core-processor/tsconfig.json
+++ b/web/src/engine/core-processor/tsconfig.json
@@ -9,5 +9,8 @@
     "rootDir": "./src"
   },
 
-  "include": [ "**/*.ts", "src/import/core/km-core.js" ],
+  "references": [
+    { "path": "../keyboard"},
+  ],
+  "include": [ "**/*.ts" ],
 }
