--- a/web/src/engine/main/tsconfig.json
+++ b/web/src/engine/main/tsconfig.json
@@ -14,6 +14,7 @@
     { "path": "../osk" },
     { "path": "../keyboard-storage" },
     { "path": "../interfaces" },
-    { "path": "../js-processor" }
+    { "path": "../js-processor" },
+    { "path": "../core-processor" },
   ]
 }
