--- a/web/src/engine/keyboard/tsconfig.json
+++ b/web/src/engine/keyboard/tsconfig.json
@@ -8,7 +8,7 @@
     "rootDir": "./src/"
   },
   "references": [
-    { "path": "../core-processor"},
+    { "path": "../core-adapter"},
   ],
   "include": [ "./src/**/*.ts"],
   "exclude": ["./src/keyboards/loaders/**/*.ts"]
