--- a/.github/workflows/deb-packaging.yml
+++ b/.github/workflows/deb-packaging.yml
@@ -185,14 +185,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Download Artifacts
+    - name: Download Source Artifacts
+      uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
+      with:
+        name: keyman-srcpkg
+        path: artifacts/keyman-srcpkg
+
+    - name: Download Binary Artifacts
       uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
       with:
         path: artifacts
+        pattern: keyman-binarypkgs-*
         merge-multiple: true
 
     - name: Install dependencies
       run: |
+        sudo apt update
         sudo DEBIAN_FRONTEND=noninteractive apt-get -q -y install autopkgtest qemu-system qemu-utils autodep8 genisoimage python3-distro-info
 
     - name: Build test image
