maint(linux): fix "no permission to write /dev/kvm" error
Inspiration for the fix from
https://github.com/etchdroid/qemu-kvm-action/blob/main/src/start.js.

--- a/.github/workflows/deb-packaging.yml
+++ b/.github/workflows/deb-packaging.yml
@@ -206,6 +206,7 @@ jobs:
     - name: Build test image
       run: |
         cd "${GITHUB_WORKSPACE}/artifacts"
+        sudo chown ${USER} /dev/kvm
         autopkgtest-buildvm-ubuntu-cloud -v --release=jammy
 
     - name: Run tests
