--- a/.github/workflows/deb-packaging.yml
+++ b/.github/workflows/deb-packaging.yml
@@ -207,12 +207,14 @@ jobs:
       run: |
         cd "${GITHUB_WORKSPACE}/artifacts"
         sudo chown ${USER} /dev/kvm
-        autopkgtest-buildvm-ubuntu-cloud -v --release=jammy
+        autopkgtest-buildvm-ubuntu-cloud -v --release=noble
 
     - name: Run tests
       run: |
+        ls -al "${GITHUB_WORKSPACE}"
         cd "${GITHUB_WORKSPACE}/artifacts"
-        autopkgtest -B *.deb keyman_*.dsc -- qemu autopkgtest-jammy-amd64.img
+        ls -al
+        autopkgtest -B *.deb keyman_*.dsc -- qemu autopkgtest-noble-amd64.img
 
   deb_signing:
     name: Sign source and binary packages
